upgrading play to sbt 0.12.0
As the first step in our quest to move to scala 2.10, play is now upgraded  to sbt 0.12.0.

Things to know:
- play is on scala 2.9.2 now
- sbt plugins were updated to 0.12.0 (sbt-idea will be updated to 1.1 final in a separate changeset)
- tests are executed in fork by default (so no more permgen issues!)
- forking has some minor overhead but not much
- forking required adding some extra clean up tasks to test helpers (both java and scala) in order to avoid test hanging
- Promise's actor system and WS' threads now can be cleaned up properly during test execution
- forking can be turned off via the standard `fork in Test:=false` setting
- if you experience hanging while running tests, make sure all your threads are shut down
- resident compiler is still turned off due to issues with empty packages,
this feature will be enabled once we are on scala 2.10 M6 (with the fix for SI-5939)

Conflicts:

	framework/project/Build.scala
	framework/project/build.properties
	framework/project/plugins.sbt
	framework/src/play-test/src/main/java/play/test/Helpers.java
	framework/src/play/src/main/java/play/libs/F.java
	framework/src/play/src/main/scala/play/api/libs/concurrent/Promise.scala
	framework/src/play/src/main/scala/play/api/libs/ws/WS.scala
	framework/src/play/src/main/scala/play/core/system/Invoker.scala

--- a/framework/sbt/sbt.boot.properties
+++ b/framework/sbt/sbt.boot.properties
@@ -1,14 +1,14 @@
 [scala]
-  version: 2.9.1
+  version: 2.9.2
 
 [app]
   org: org.scala-sbt
   name: sbt
-  version: read(sbt.version)[0.11.3]
+  version: ${sbt.version-read(sbt.version)[${{sbt.version}}]}
   class: ${sbt.main.class-sbt.xMain}
-  components: xsbti
-  cross-versioned: true
-
+  components: xsbti,extra
+  cross-versioned: ${sbt.cross.versioned-false}
+  
 [repositories]
   local
   maven-local
