--- a/samples/workinprogress/pi-calculator/conf/application.conf
+++ b/samples/workinprogress/pi-calculator/conf/application.conf
@@ -7,6 +7,8 @@
 # If you deploy your application to several instances be sure to use the same key!
 application.secret="sivRoR?TIH7KFoWV=54ovs?hrvq953NtR5B6RWiRksD:^3Hu1hH[5q1R3t:`MitD"
 
+application.global=MyGlobal
+
 # Database configuration
 # ~~~~~ 
 # You can declare as many datasources as you want.
